ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: beanworksui-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: cloudfront
                port:
                  number: 8080
            path: /beanworksui
            pathType: ImplementationSpecific
